feat(infra): Complete FeedRepository with tests